syntax = "proto3";

import "Figure/FigureConfigurationData.proto";
import "Room/RoomPositionData.proto";

message RoomUserData {
    string id = 1;

    optional string name = 2;

    optional FigureConfigurationData figure_configuration = 3;

    optional RoomPositionData position = 4;
    optional uint32 direction = 5;

    optional bool typing = 6;
    optional bool idling = 7;

    optional bool has_rights = 8;

    repeated string actions = 9;
}
